--- a/part2/Phonebook/package.json
+++ b/part2/Phonebook/package.json
@@ -11,7 +11,8 @@
     "server": "json-server -p3001 --watch db.json"
   },
   "dependencies": {
-    "axios": "^1.6.8",
+    "axios": "^1.7.2",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -19,7 +20,7 @@
   "devDependencies": {
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
-    "@vitejs/plugin-react": "^4.2.1",
+    "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
