--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -1,30 +1,33 @@
 {
-    "name": "part4",
-    "version": "1.0.0",
-    "main": "index.js",
-    "scripts": {
-        "start": "node index.js",
-        "dev": "nodemon index.js",
-        "test": "jest",
-        "test:node": "node --test"
-    },
-
-    "dependencies": {
-        "axios": "^1.7.2",
-        "bcrypt": "^5.1.1",
-        "bcryptjs": "^2.4.3",
-        "body-parser": "^1.20.2",
-        "cors": "^2.8.5",
-        "dotenv": "^10.0.0",
-        "express": "^4.19.2",
-        "jsonwebtoken": "^9.0.2",
-        "mongodb": "^6.8.0",
-        "mongoose": "^8.5.0",
-        "mongoose-unique-validator": "^5.0.1"
-    },
-    "devDependencies": {
-        "jest": "^29.7.0",
-        "nodemon": "^3.1.4",
-        "supertest": "^7.0.0"
-    }
+  "name": "part4",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "test": "jest",
+    "test:node": "node --test"
+  },
+  "dependencies": {
+    "axios": "^1.7.2",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.8.0",
+    "mongoose": "^8.5.0",
+    "mongoose-unique-validator": "^5.0.1"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3",
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.4",
+    "supertest": "^7.0.0",
+    "@babel/preset-env": "^7.22.15",
+    "@babel/core": "^7.22.11",
+    "babel-jest": "^29.7.0"
+  }
 }
