--- a/part6/unicafe-redux/package.json
+++ b/part6/unicafe-redux/package.json
@@ -1,7 +1,7 @@
 {
   "name": "unicafe-redux",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -15,9 +15,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.2",
-    "redux": "^5.0.1"
+    "redux": "^5.0.0"
   },
   "devDependencies": {
+    "rimraf": "^5.0.0",
+    "glob": "^9.0.0",
     "@babel/preset-env": "^7.22.10",
     "@babel/preset-react": "^7.22.5",
     "@types/react": "^18.2.15",
